--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "restToDoApp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jinsukmik/restToDoApp.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jinsukmik/restToDoApp/issues"
-  },
-  "homepage": "https://github.com/jinsukmik/restToDoApp#readme"
+	"name": "restToDoApp",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "nodemon server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/jinsukmik/restToDoApp.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/jinsukmik/restToDoApp/issues"
+	},
+	"homepage": "https://github.com/jinsukmik/restToDoApp#readme",
+	"devDependencies": {
+		"nodemon": "^1.19.1"
+	},
+	"dependencies": {
+		"express": "^4.17.1"
+	}
 }
